# Seoseca

./: README.md  add.png~  addclick.png~  addhover.png~  btnselected.png-autosave.kra  meson.build  start
.github/workflows/: c-cpp.yml
src/: main.cpp  meson.build
src/UI/: EngineUI.cpp  EngineUI.h  meson.build
src/demo/: demo.cpp  texture-default.png~
src/libs/: meson.build
src/libs/Engine/: Angle.hpp  Angle.inl  Logic.cpp  Logic.h  UI.cpp  UI.h  meson.build  portable-file-dialogs.h
src/libs/Gui/: Button.cpp  Button.hpp  Gui.hpp  Menu.cpp  Menu.hpp  SpriteButton.cpp  SpriteButton.hpp  TextBox.hpp  Widget.cpp  Widget.hpp  meson.build
src/libs/Gui/Enums/: Enums.hpp  meson.build
src/libs/Gui/Layouts/: FormLayout.cpp  FormLayout.hpp  Layout.cpp  Layout.hpp  meson.build
src/libs/Gui/Utils/: Box.cpp  Box.hpp  meson.build
