subdir('Enums')
subdir('Layouts')
subdir('Utils')
all_includes += include_directories('.')

Button_lib = static_library(
  'Button',
  'Button.cpp',
  install : false
)
CheckBox_lib = static_library(
  'CheckBox',
  'CheckBox.cpp',
  install : false
)
Image_lib = static_library(
  'Image',
  'Image.cpp',
  install : false
)
Label_lib = static_library(
  'Label',
  'Label.cpp',
  install : false
)
Menu_lib = static_library(
  'Menu',
  'Menu.cpp',
  install : false
)
ProgressBar_lib = static_library(
  'ProgressBar',
  'ProgressBar.cpp',
  install : false
)
Slider_lib = static_library(
  'Slider',
  'Slider.cpp',
  install : false
)
SpriteButton_lib = static_library(
  'SpriteButton',
  'SpriteButton.cpp',
  install : false
)
TextBox_lib = static_library(
  'TextBox',
  'TextBox.cpp',
  install : false
)
Theme_lib = static_library(
  'Theme',
  'Theme.cpp',
  install : false
)
Widget_lib = static_library(
  'Widget',
  'Widget.cpp',
  install : false
)